tdf#165341 - FILEOPEN PPTX: fix paragraph alignment for text wrapped shapes

In case of word wrapped text objects no need to set TextHorizontalAdjust based on text alignment.

regression from: 1d9ce0a67a71e51569cd33c26270eeece587a354
(tdf#162571 - sd: Text box expands or shrinks on left or right or)

Change-Id: I9455e30a58cc3853bc2a1c2030ab7cc62314106c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182616
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>